Fixed sticky footer not aligning

--- a/_sass/_stickyfooter.scss
+++ b/_sass/_stickyfooter.scss
@@ -1,4 +1,4 @@
-$footer-height: 100px;
+$footer-height: 135px;
 
 html, body {
 	height: 100%;
